--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,15 @@
   </head>
   <body>
     <h1>Hello there</h1>
+    <footer>
+      <p>
+        This website for coded by Zuzana Zitkova and it is open sourced on
+        <a
+          href="https://github.com/ZuzanaZitkova/react-app-forecast"
+          target="_blank"
+          >github</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
