--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="web site for react weather app" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>weather app</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+
+    <title>React weather app</title>
   </head>
+
   <body>
-    <h1>Hello there</h1>
-    <footer>
-      <p>
-        This website for coded by Zuzana Zitkova and it is open sourced on
-        <a
-          href="https://github.com/ZuzanaZitkova/react-app-forecast"
-          target="_blank"
-          >github</a
-        >
-      </p>
-    </footer>
+    <div class="container">
+      <div id="root"></div>
+    </div>
   </body>
 </html>
